--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "next-contentlayer": "^0.3.3",
     "next-theme": "^0.1.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
