--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "npx contentlayer build && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cl": "npx contentlayer build"
   },
   "dependencies": {
     "@types/node": "20.3.1",
@@ -20,7 +21,7 @@
     "eslint-config-next": "13.4.7",
     "next": "^13.4.2",
     "next-contentlayer": "^0.3.3",
-    "next-theme": "^0.1.5",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
