--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.1.0"
+    "@cloudflare/next-on-pages": "^1.1.0",
+    "next-sitemap": "^4.1.3"
   }
 }
