--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx contentlayer build && next build",
+    "build": "npx contentlayer build && next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "cl": "npx contentlayer build"
