--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ next-env.d.ts
 /build
 /public/robots.txt
 /public/sitemap*.xml
+static/media/facebook.de0e2483.svg
+static/media/github.27e7437f.svg
+static/media/insta.e09052df.svg
+static/media/moon.098cc23f.svg
+static/media/search.0b3dddce.svg
+static/media/sun.35e1f3dc.svg
