--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx contentlayer build && next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "cl": "npx contentlayer build"
+    "cl": "npx contentlayer build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "20.3.1",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.1.0",
-    "next-sitemap": "^4.1.3"
+    "next-sitemap": "^4.1.3",
+    "husky": "^8.0.0"
   }
 }
