--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.1.0",
-    "next-sitemap": "^4.1.3",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "next-sitemap": "^4.1.3"
   }
 }
