--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dayjs": "^1.11.8",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "next": "^13.4.8",
+    "next": "latest",
     "next-contentlayer": "^0.3.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
