--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": false,
-    "**/static": true,
-    "static": true,
+    "**/static": false,
+    "static": false,
     "**/.next": true,
     ".next": true,
     "**/node_modules": true,
