--- a/package.json
+++ b/package.json
@@ -12,20 +12,12 @@
   },
   "dependencies": {
     "@radix-ui/react-popover": "1.0.6",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "contentlayer": "^0.3.3",
     "dayjs": "^1.11.8",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
     "next": "latest",
     "next-contentlayer": "^0.3.3",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "^6.1.1",
@@ -33,13 +25,21 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.2",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.1.0",
+    "@types/node": "^20.5.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.15",
+    "contentlayer": "^0.3.4",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.19",
     "husky": "^8.0.0",
-    "next-sitemap": "^4.1.3"
+    "next-sitemap": "^4.1.3",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   }
 }
