--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.0.6",
+    "@radix-ui/react-toast": "^1.1.4",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.8",
-    "next": "latest",
+    "next": "^13.4.19",
     "next-contentlayer": "^0.3.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -25,7 +27,8 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.2",
-    "tailwind-merge": "^1.13.2"
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.1.0",
