:sparkles: Data refactor
add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,8 @@
     "**/Thumbs.db": false,
     "**/static": false,
     "static": false,
-    "**/.next": true,
-    ".next": true,
+    "**/.next": false,
+    ".next": false,
     "**/node_modules": true,
     "node_modules": true,
     "**/.vscode": true,
